@@ -1426,13 +1426,16 @@ Example : formation joe 2\n\r\
 Short(s): \n\r\
 When a player has followers, this command can be used to show where in the \
 group order the player is located.  The "front line" is considered row 0. \
-The lead player must always be on a row ahead or on the same row as his followers. \
 When formations are used in conjunction with AUTOMELEE, it can effectively aid \
 archers and mages with ranged spells in battle.  The range of the group members in \
 formation, with respect to enemies, is always relative to the initial range of the lead \
 player in combat.  That is to say, if a group member is set to be at row #1, and \
 the leader uses a bow to start off at range 3, then that group member will be at \
-row #4 instead (1 off from the leaders position).  \n\r\
+row #4 instead (1 off from the leaders position).\n\r\
+\n\r\
+Formations only keep their initial integrity when a member of the formation starts \
+combat.\n\r\
+\n\r\
 Any member of a group can enter the FORMATION command without parameters to view \
 the current marching order. See also GROUP, FOLLOW, NOFOLLOW, ORDER, and GTELL.
 
